--- a/assets/Components/nav.html
+++ b/assets/Components/nav.html
@@ -2,7 +2,10 @@
     <nav class="navbar">
         <div class="logo">
             <img src="assets/Images/MITS.png" alt="MITS Logo" />
-            <h1>MITS MADANAPALLE</h1>
+            <div class="logo-text">
+            <h1>MITS</h1> 
+            <h1>Madanapalle</h1>
+            </div>
             <img src="assets/Images/webclub.png" alt="WebClub Logo">
         </div>
         <div class="nav-links">
