--- a/assets/CSS/footer.css
+++ b/assets/CSS/footer.css
@@ -1,10 +1,5 @@
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
   footer {
-    background-color: #2c2c54;
+    background-color: #1f1f3b; 
     color: #fff;
     padding: 20px 0;
   }
@@ -28,7 +23,7 @@ body {
   
   .footer-section h3, .footer-section h4 {
     margin-bottom: 10px;
-    color: #f7c744;
+    color: #f0a028;
   }
   
   .footer-section ul {
