--- a/assets/CSS/nav.css
+++ b/assets/CSS/nav.css
@@ -5,6 +5,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .navbar .logo {
@@ -17,10 +21,25 @@
     height: 60px;
 }
 
-.navbar .logo h1 {
+.navbar .logo-text h1 {
     margin: 0;
     color: #f0a028; /* Orange text */
     font-size: 24px;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 5px;
+}
+
+.navbar .logo-text h1:last-child {
+    color: #fff;
+    font-size: 20px;
+    border-bottom: none;
+
+}
+
+.navbar .logo-text {
+    display: flex;
+    flex-direction: column; /* Add this line */
+    align-items: center;
 }
 
 .navbar .nav-links {
