--- a/assets/Components/footer.html
+++ b/assets/Components/footer.html
@@ -2,7 +2,7 @@
     <div class="footer-container">
       <div class="footer-section">
         <img src="./assets/Images/webclub.png" alt="MITS Web Club" class="footer-logo">
-        <h3>MITS Web Club</h3>
+        <h3 class="footer-logo-caption">MITS Web Club</h3>
       </div>
       <div class="footer-section">
         <h4>Quick Links</h4>
@@ -16,7 +16,7 @@
       <div class="footer-section">
         <h4>Contact Us</h4>
         <p>📞 7670822609</p>
-        <p>✉ <a href="mailto:webclubmits@gmail.com">webclubmits@gmail.com</a></p>
+        <p>✉ <a id="mail" href="mailto:webclubmits@gmail.com">  webclubmits@gmail.com</a></p>
       </div>
       <div class="footer-section">
         <h4>Reach Us</h4>
