--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -18,6 +24,13 @@ main {
     max-width: 1200px;
     margin: 0 auto;
     padding: 3rem 1rem;
+}
+
+.bg-pattern{
+    position: absolute;
+    top: 10vh;
+    right: 0;
+    height: 50vw;
 }
 
 .hero {
