--- a/assets/CSS/projects.css
+++ b/assets/CSS/projects.css
@@ -23,11 +23,27 @@
     color: white;
     align-items: center;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     justify-content: space-around;
     margin-inline: auto;
-    width: 80%;
+    /* width: 80%; */
     gap: 20px;
+    position: relative;
+    z-index: 1;
+    padding: 2rem;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.project-container::before{
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.1);
+    z-index: 0;
 }
 
 .project-cards {
@@ -38,9 +54,9 @@
 
 .project-card {
     padding: 1rem;
-    gap: 2rem;
-    background-color: rgb(71, 153, 201);
+    gap: 0.7rem;
     border-radius: 10px;
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
@@ -73,4 +89,16 @@
         margin-inline: auto;
         cursor: pointer;
     }
+}
+
+.project-card::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
+    z-index: 0;
 }
