--- a/assets/Components/footer.html
+++ b/assets/Components/footer.html
@@ -15,8 +15,8 @@
       </div>
       <div class="footer-section">
         <h4>Contact Us</h4>
-        <p><i class="fas fa-phone-alt"></i> <a id="mail" href="tel:+91 7670822609">7670822609</a></p>
-        <p><i class="fas fa-envelope"></i> <a id="mail" href="mailto:webclubmits@gmail.com">webclubmits@gmail.com</a></p>
+        <p><i class="fas fa-phone-alt contact-icons"></i> <a id="mail" href="tel:+91 7670822609">7670822609</a></p>
+        <p><i class="fas fa-envelope contact-icons"></i> <a id="mail" href="mailto:webclubmits@gmail.com">webclubmits@gmail.com</a></p>
       </div>
       <div class="footer-section">
         <h4>Reach Us</h4>
