Add responsive hamburger menu and improve navbar styles

--- a/assets/Components/nav.html
+++ b/assets/Components/nav.html
@@ -8,6 +8,9 @@
             </div>
             <img src="assets/Images/webclub.png" alt="WebClub Logo">
         </div>
+        <button class="hamburger">
+            <i class="fas fa-bars"></i>
+        </button>
         <div class="nav-links">
             <ul>
                 <li><a href="#" class="active">Home</a></li>
