--- a/assets/Components/footer.html
+++ b/assets/Components/footer.html
@@ -7,11 +7,11 @@
       <div class="footer-section">
         <h4>Quick Links</h4>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Workshops</a></li>
-          <li><a href="#">Gallery</a></li>
-        </ul>
+          <li><a href="#Home" class="active">Home</a></li>
+          <li><a href="#Memories">Memories</a></li>
+          <li><a href="#Projects">Projects</a></li>
+          <li><a href="#Events">Workshops</a></li>
+      </ul>
       </div>
       <div class="footer-section">
         <h4>Contact Us</h4>
