--- a/assets/Components/nav.html
+++ b/assets/Components/nav.html
@@ -13,10 +13,10 @@
         </button>
         <div class="nav-links">
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Workshops</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="#Home" class="active">Home</a></li>
+                <li><a href="#Memories">Memories</a></li>
+                <li><a href="#Projects">Projects</a></li>
+                <li><a href="#Events">Workshops</a></li>
             </ul>
         </div>
     </nav>
