--- a/assets/CSS/projects.css
+++ b/assets/CSS/projects.css
@@ -2,6 +2,7 @@
 .projects-section {
     background-color: hsl(240, 31%, 18%);
     padding: 2rem 0;
+    padding-top: 5rem;
     text-align: center;
     color: #fff;
 }
