--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -9,6 +9,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -36,7 +37,7 @@ main {
 
 .hero {
     text-align: center;
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
 }
 
 .hero h1 {
