--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -22,9 +22,9 @@ body {
 
 /* Main Content Styles */
 main {
-    max-width: 1200px;
+    max-width: 1340px;
     margin: 0 auto;
-    padding: 3rem 1rem;
+    padding: 3.5rem 1rem;
 }
 
 .bg-pattern{
@@ -36,13 +36,16 @@ main {
 
 .hero {
     text-align: center;
-    margin-bottom: 5rem;
+    margin-bottom: 2.5rem;
 }
 
 .hero h1 {
-    font-size: 4.5rem;
+    font-size: 5rem;
     font-weight: bold;
-    color: var(--white-color);
+    background: -webkit-linear-gradient(#ffffff,#ffffff,#ffffff, #999999);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* color: var(--white-color); */
     margin: 0;
     letter-spacing: 0.05em;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
@@ -51,15 +54,16 @@ main {
 .content {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 3rem;
-    align-items: center;
+    gap: 3.5rem;
+    /* align-items: center; */
+    align-items: start;
 }
 
 .text h2 {
     font-size: 2.5rem;
     color: var(--org-color);
     line-height: 1.2;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .text p {
@@ -99,7 +103,9 @@ main {
 }
 
 .image img {
-    width: 100%;
+    /* width: 100%; */
+    width: 630px;
+    height: 360px;
     border-radius: 1rem;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
