--- a/assets/CSS/events.css
+++ b/assets/CSS/events.css
@@ -4,6 +4,7 @@
     padding: 2rem;
     padding-top: 6rem;
     text-align: center;
+    /* width: 1400px; */
 }
 
 .events-section .heading h1 {
@@ -28,11 +29,11 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    width: 60%;
+    width: 70%;
     height: 65vh;
     overflow-y: auto;
     margin-inline: auto;
-    background: linear-gradient(to bottom right,#ffecec,#FFFFFF, #999999);
+    background: linear-gradient(to bottom right,#ffffff,#fce3cb, #F0A028);
     border-radius: 20px;
     margin-bottom: 2rem;
 }
