--- a/assets/CSS/testimonials.css
+++ b/assets/CSS/testimonials.css
@@ -8,6 +8,7 @@
     font-size: 2.5rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
+    margin-top: 2.5rem;
 }
 
 .testimonials .heading h2 {
