--- a/assets/CSS/projects.css
+++ b/assets/CSS/projects.css
@@ -73,7 +73,10 @@
 }
 
 .project-card img {
-    max-width: 100%;
+    max-width: 50px;
+    height: 50px;
+    border: 3.5px solid #F0A028;
+    background-color: #F0A028;
     border-radius: 10px;
 }
 
