--- a/assets/Components/nav.html
+++ b/assets/Components/nav.html
@@ -13,10 +13,10 @@
         </button>
         <div class="nav-links">
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="/#Home" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="#">DevSpace</a></li>
-                <li><a href="#">Memories</a></li>
+                <li><a href="https://mitswebclub.pythonanywhere.com">DevSpace</a></li>
+                <li><a href="/#Memories">Memories</a></li>
             </ul>
         </div>
     </nav>
