--- a/assets/Components/nav.html
+++ b/assets/Components/nav.html
@@ -13,8 +13,8 @@
         </button>
         <div class="nav-links">
             <ul>
-                <li><a href="/#Home" class="active">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="/" class="active">Home</a></li>
+                <li><a href="/about.html">About Us</a></li>
                 <li><a href="https://mitswebclub.pythonanywhere.com">DevSpace</a></li>
                 <li><a href="/#Memories">Memories</a></li>
             </ul>
