Refactored CSS styles

--- a/assets/CSS/events.css
+++ b/assets/CSS/events.css
@@ -1,5 +1,5 @@
 .events-section {
-    background-color: #1b1b3a;
+    /* background-color: #1b1b3a; */
     color: #ffffff;
     padding: 2rem;
     padding-top: 6rem;
