--- a/assets/Components/footer.html
+++ b/assets/Components/footer.html
@@ -24,7 +24,7 @@
         <p>Kadiri Road, Angallu Village, Madanapalle, Andhra Pradesh, 517325.</p>
       </div>
     </div>
-    <div class="footer-bottom">
+    <!-- <div class="footer-bottom">
       <p>&copy; 2025 MITS Web Club. All rights reserved.</p>
-    </div>
+    </div> -->
 </footer>
