--- a/assets/CSS/nav.css
+++ b/assets/CSS/nav.css
@@ -167,3 +167,9 @@ header {
         border-bottom: none;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .navbar{
+        gap: 0;
+    }
+}
